# python-project-50

./: .coverage  .gitignore  Makefile  README.md  hyi.py  pyproject.toml
.github/workflows/: hexlet-check.yml  test.yml
gendiff/: .argparse.py.swo  .argparse.py.swp  .file1.json.swp  .file2.json.swp  .gendiff.py.swp  argparse.py  filepath2.yml  gendiff.py  gendiff_file.py  parse_module.py
gendiff/.ipynb_checkpoints/: gendiff-checkpoint.py  parse_module-checkpoint.py  stylish-checkpoint.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  script_gendiff.py
tests/: __init__.py  test_argparse.py
tests/fixtures/: fixture.py
tests/fixtures/correct/: res_json.txt
